tdf#101086 sc autofilter popup: avoid flicker

Regression from commit a4cb27f61376d8f2d8faed0022c291af68d437bd
(refactor ScMenuFloatingWindow to use RenderContext, 2015-05-14), the
problem was that the change had two effects:

1) It removed incremental rendering that now causes flicker.

2) It added support for painting into a rendercontext, not on the window
itself.

Given that here a hierarchy of widgets have to be painted at once (to
avoid flicker), use vcl::Window::RequestDoubleBuffering() instead of the
much simpler vcl::BufferDevice.

This improves the situation on Windows, but explicitly blacklist the
focus rectangle case (gtk3) which is currently not compatible with this
higher level double-buffering (and there we already have lower-level
double-buffering anyway, similar to OpenGL).

(cherry picked from commit 4dadbff74eff5f8ad00df99c659f8a2b914e09a1)

Change-Id: I77aa951e14db668166dc8757e36c037ee98243bf